--- a/JavaScript/画面にカラフルな色をランダム生成.md
+++ b/JavaScript/画面にカラフルな色をランダム生成.md
@@ -253,14 +253,14 @@ HTMLとJavaScript
 
 ||意味|
 |-|-|
-|フレックスコンテナ|フレックスを使用してレイアウトされた文書の領域のこと。|
-|フレックスアイテム|フレックスコンテナを作成するには`display:flex`または`display:inline-flex`に設定する必要がある。`display:flex`または`display:inline-flex`に設定された要素の**直下の子要素はフレックスアイテムとなる。**|
+|フレックスコンテナ|フレックスを使用してレイアウトされた文書の領域のこと。フレックスコンテナを作成するには`display:flex`または`display:inline-flex`に設定する必要がある。|
+|フレックスアイテム|`display:flex`または`display:inline-flex`に設定された要素の**直下の子要素はフレックスアイテムとなる。**|
 
 **初期値**
 
 `flex-directionプロパティ`の初期値は`row`となる。つまり、デフォルトのフレックスコンテナ内ではアイテムが**横並び**に並んでいく。
 
-`flex-wrapプロパティ`の初期値は`nowrap`となる。つまり、アイテムがコンテナに収まらない場合は、**折り返されずに領域からはみ出る。**
+`flex-wrapプロパティ`の初期値は`nowrap`となる。この場合基本的に、アイテムはコンテナの大きさに合うように収縮される。一方、収縮ができなかった場合、アイテムは**折り返されずに領域からはみ出る(オーバーフローする)。**
 
 **使い方**
 
