--- a/JavaScript/画面にカラフルな色をランダム生成.md
+++ b/JavaScript/画面にカラフルな色をランダム生成.md
@@ -260,7 +260,7 @@ HTMLとJavaScript
 
 `flex-directionプロパティ`の初期値は`row`となる。つまり、デフォルトのフレックスコンテナ内ではアイテムが**横並び**に並んでいく。
 
-`flex-wrapプロパティ`の初期値は`nowrap`となる。この場合基本的に、アイテムはコンテナの大きさに合うように収縮される。一方、収縮ができなかった場合、アイテムは**折り返されずに領域からはみ出る(オーバーフローする)。**
+`flex-wrapプロパティ`の初期値は`nowrap`となる。この場合基本的に、**アイテムはコンテナの大きさに合うように収縮される。** 一方、収縮ができなかった場合、アイテムは**折り返されずに領域からはみ出る(オーバーフローする)。**
 
 **使い方**
 
