--- a/JavaScript/画面にカラフルな色をランダム生成.md
+++ b/JavaScript/画面にカラフルな色をランダム生成.md
@@ -9,6 +9,7 @@
 * [getElementByIdメソッド](#getElementByIdメソッド)
 * [insertBeforeメソッド](#insertBeforeメソッド)
 * [フレックス](#フレックス)
+* [折り返す](#折り返す)
 
 ## 概要
 
@@ -301,6 +302,50 @@ HTMLとJavaScript
 |`> *`|`>`をは子要素に適用するという意味。`*`は「全てに」という意味。つまり、上記のコードでは、class名`box`を持つ要素の**子要素全てに対して適用する**という意味になる。|
 |`border-radius`|どれくらい角を丸めるかを指定できる。英語でradiusは「半径」という意味。1つの数値を設定すると「角丸」となり、2つの数値を設定すると角が「楕円」となる。上記のコードでは **「楕円」** を設定している。|
 |`/ 0.5`|`rgb()`では`/ 数値`の部分で**アルファチャネル**を指定できる。アルファチャネルは**ある色が後ろ側にある色をどの程度覆い隠すか**を表す。つまりどれくらい透けるかを表す。`/ 0.5`は50%を表している。|
+
+### 折り返す
+
+`flex`で、アイテムが大きすぎてすべて1行に表示できない場合、**別の行に折り返す**動作をさせるには、`flex-wrapプロパティ`を`wrap`にする。
+
+**使い方**
+
+実際に使用するには以下のようなコードを書く。
+
+```
+<!-- HTML -->
+<body>
+
+<div class="box">
+  <div>One</div>
+  <div>Two</div>
+  <div>Three <br />には追加の<br />テキストが<br />あります</div>
+</div>
+
+</body>
+```
+```
+/* CSS */
+.box > * {
+  border: 2px solid rgb(96 139 168);
+  border-radius: 5px;
+  background-color: rgb(96 139 168 / 0.2);
+  width: 200px;
+}
+
+.box {
+  width: 500px;
+  border: 2px dotted rgb(96 139 168);
+  display: flex;
+  flex-wrap: wrap;
+}
+```
+
+**解説**
+
+上記のコードを実行すると、折り返されるのが確認できる。
+
+`flex-wrap: nowrap`に変更してみると、**コンテナ内のアイテムが収縮する**のがわかる。サーチコンソールで確認したところ、CSSでは`width:200px;`と設定しているのに実際は`width`が`166px`となっていた。
+
 
 
 
