--- a/JavaScript/画面にカラフルな色をランダム生成.md
+++ b/JavaScript/画面にカラフルな色をランダム生成.md
@@ -305,7 +305,9 @@ HTMLとJavaScript
 
 ### 折り返す
 
-`flex`で、アイテムが大きすぎてすべて1行に表示できない場合、**別の行に折り返す**動作をさせるには、`flex-wrapプロパティ`を`wrap`にする。
+`flex`でアイテムが大きすぎてすべて1行に表示できない場合、**別の行に折り返す**動作をさせることができる。
+
+このためには`flex-wrapプロパティ`を`wrap`にする。
 
 **使い方**
 
