--- a/JavaScript/画面にカラフルな色をランダム生成.md
+++ b/JavaScript/画面にカラフルな色をランダム生成.md
@@ -346,7 +346,7 @@ HTMLとJavaScript
 
 上記のコードを実行すると、折り返されるのが確認できる。
 
-`flex-wrap: nowrap`に変更してみると、**コンテナ内のアイテムが収縮する**のがわかる。サーチコンソールで確認したところ、CSSでは`width:200px;`と設定しているのに実際は`width`が`166px`となっていた。
+一方で`flex-wrap: nowrap`に変更してみると、**コンテナ内のアイテムが収縮する**のがわかる。サーチコンソールで確認したところ、CSSでは`width:200px;`と設定しているのに実際は`width`が`166px`となっていた。
 
 
 
