--- a/JavaScript/画面にカラフルな色をランダム生成.md
+++ b/JavaScript/画面にカラフルな色をランダム生成.md
@@ -10,6 +10,7 @@
 * [insertBeforeメソッド](#insertBeforeメソッド)
 * [フレックス](#フレックス)
 * [折り返す](#折り返す)
+* [Mathround](#Mathround)
 
 ## 概要
 
@@ -347,6 +348,10 @@ HTMLとJavaScript
 上記のコードを実行すると、折り返されるのが確認できる。
 
 一方で`flex-wrap: nowrap`に変更してみると、**コンテナ内のアイテムが収縮する**のがわかる。サーチコンソールで確認したところ、CSSでは`width:200px;`と設定しているのに実際は`width`が`166px`となっていた。
+
+### Mathround
+
+`Math.round()関数`は引数として与えられた数を**四捨五入**にして返す。
 
 
 
