--- a/JavaScript/【実践編】画面にカラフルな色をランダム生成.md
+++ b/JavaScript/【実践編】画面にカラフルな色をランダム生成.md
@@ -3,7 +3,7 @@
 
 ## 概要
 
-[基礎知識編](https://github.com/ren-github-account/Today-I-Learned/blob/main/JavaScript/%E3%80%90%E5%9F%BA%E7%A4%8E%E7%9F%A5%E8%AD%98%E7%B7%A8%E3%80%91%E7%94%BB%E9%9D%A2%E3%81%AB%E3%82%AB%E3%83%A9%E3%83%95%E3%83%AB%E3%81%AA%E8%89%B2%E3%82%92%E3%83%A9%E3%83%B3%E3%83%80%E3%83%A0%E7%94%9F%E6%88%90.md)で必要な知識はまとめたので、あとは以下のページを参考にコードを実行してみた結果をまとめる。
+[基礎知識編](https://github.com/ren-github-account/Today-I-Learned/blob/main/JavaScript/%E3%80%90%E5%9F%BA%E7%A4%8E%E7%9F%A5%E8%AD%98%E7%B7%A8%E3%80%91%E7%94%BB%E9%9D%A2%E3%81%AB%E3%82%AB%E3%83%A9%E3%83%95%E3%83%AB%E3%81%AA%E8%89%B2%E3%82%92%E3%83%A9%E3%83%B3%E3%83%80%E3%83%A0%E7%94%9F%E6%88%90.md)で必要な知識はまとめたので、あとは以下のページを参考にコードを実行してみた結果をまとめていく。
 
 https://sbfl.net/blog/2018/05/21/javascript-generate-better-color/
 
@@ -26,8 +26,8 @@ colorBoxContainer.style.flexWrap = 'wrap';
 for(let i=0; i<100; i++) {
   // サイズは100px x 100px。
   const colorBox = document.createElement('div');
-  colorBox.style.width = '50px';
-  colorBox.style.height = '50px';
+  colorBox.style.width = '100px';
+  colorBox.style.height = '100px';
 
   // 色は完全にランダム。
   const r = Math.round(Math.random() * 255);
@@ -45,3 +45,10 @@ document.body.appendChild(colorBoxContainer);
 
 </body>
 ```
+
+**解説**
+
+上記のコードを実行すると、画面の右側に謎のスペースが空いてしまう。なぜそうなるかというと、これは`flex-wrap: wrap`を設定しているために起こる。
+
+`flex-wrap: wrap`に設定すると、コンテナ(上記のコードでは`div要素`)の領域内に収まりきらくなると次の行に折り返して表示されるようになる。つまり、上記のコードでは生成される色の付いたブロックの大きさを`100x100`にしているため、幅の`100px`が入りきらずに次の行に折り返されるという動作し、このことによって**画面の右側に空間が空いてしまうということになる。**
+
