--- a/JavaScript/【実践編】画面にカラフルな色をランダム生成.md
+++ b/JavaScript/【実践編】画面にカラフルな色をランダム生成.md
@@ -48,9 +48,15 @@ document.body.appendChild(colorBoxContainer);
 
 **解説**
 
-上記のコードを実行すると、画面の右側に謎のスペースが空いてしまう。なぜそうなるかというと、これは`flex-wrap: wrap`を設定しているために起こる。
+上記のコードを実行すると、**画面の右側に謎のスペースが空いてしまう。** これはなぜそうなるかというと、これは`flex-wrap: wrap`を設定しているために起こる。
 
 `flex-wrap: wrap`に設定すると、コンテナ(上記のコードでは`div要素`)の領域内に収まりきらくなると次の行に折り返して表示されるようになる。つまり、上記のコードでは生成される色の付いたブロックの大きさを`100x100`にしているため、幅の`100px`が画面の幅に入りきらずに次の行に折り返されるという動作し、このことによって**画面の右側に余分な空白が空いてしまうということになる。**
 
 なので`width`と`height`をそれぞれ`50px`に変更すると、**画面右側の空白は少なくなる。**
+
+あとは最後の行の`document.body.appendChild(colorBoxContainer);`を書かないとどうなるかというと、実行しても真っ白な画面が表示される。
+
+これは **`document.createElement`で要素を作成しただけではダメ**で、`appendChild`で要素を表すノード内に追加する必要があるから。
+
+
 
