--- a/JavaScript/【実践編】画面にカラフルな色をランダム生成.md
+++ b/JavaScript/【実践編】画面にカラフルな色をランダム生成.md
@@ -54,7 +54,7 @@ document.body.appendChild(colorBoxContainer);
 
 なので`width`と`height`をそれぞれ`50px`に変更すると、**画面右側の空白は少なくなる。**
 
-あとは最後の行の`document.body.appendChild(colorBoxContainer);`を書かないとどうなるかというと、実行しても真っ白な画面が表示される。
+あと最後の行の`document.body.appendChild(colorBoxContainer);`を書かないとどうなるかというと、実行しても真っ白な画面が表示される。
 
 これは **`document.createElement`で要素を作成しただけではダメ**で、`appendChild`で要素を表すノード内に追加する必要があるから。
 
