--- a/JavaScript/【実践編】画面にカラフルな色をランダム生成.md
+++ b/JavaScript/【実践編】画面にカラフルな色をランダム生成.md
@@ -58,5 +58,8 @@ document.body.appendChild(colorBoxContainer);
 
 これは **`document.createElement`で要素を作成しただけではダメ**で、`appendChild`で要素を表すノード内に追加する必要があるから。
 
+**注意点**
+
+`styleオブジェクト`を使って`color`などを指定する時は**シングルクォーテーションもしくはダブルクォーテーションで囲むか、テンプレートリテラルを使用する時のバッククォーテーション「\`」で囲むのを忘れずに。** そうしないとエラーになる。
 
 
