--- a/JavaScript/【実践編】画面にカラフルな色をランダム生成.md
+++ b/JavaScript/【実践編】画面にカラフルな色をランダム生成.md
@@ -1,5 +1,7 @@
 *目次*
 * [概要](#概要)
+* [RGBを使用してランダム生成](#RGBを使用してランダム生成)
+* [相対値構文など](#相対値構文など)
 
 ## 概要
 
@@ -62,4 +64,10 @@ document.body.appendChild(colorBoxContainer);
 
 `styleオブジェクト`を使って`color`などを指定する時は**シングルクォーテーションもしくはダブルクォーテーションで囲むか、テンプレートリテラルを使用する時のバッククォーテーション「\`」で囲むのを忘れずに。** そうしないとエラーになる。
 
+### 相対値構文など
 
+`rgb()関数`を使って色を指定する方法には**絶対値構文+**と**相対値構文**の2種類が存在する。
+
+絶対値構文については上記のコードでも使用したように、値が一つに定まる通常の指定方法なので問題ないと思う。
+
+一方で**相対値構文**を使用すると、起点となる色をもとにして透明度だけ変更したり、起点色の`rgb値`のうち`r`の値だけ使用して色を設定したりといったように、**起点色という一つの色をもとに柔軟な色設定が可能となる。**
