--- a/JavaScript/【実践編】画面にカラフルな色をランダム生成.md
+++ b/JavaScript/【実践編】画面にカラフルな色をランダム生成.md
@@ -66,8 +66,16 @@ document.body.appendChild(colorBoxContainer);
 
 ### 相対値構文など
 
-`rgb()関数`を使って色を指定する方法には**絶対値構文+**と**相対値構文**の2種類が存在する。
+`rgb()関数`を使って色を指定する方法には**絶対値構文**と**相対値構文**の2種類が存在する。
 
 絶対値構文については上記のコードでも使用したように、値が一つに定まる通常の指定方法なので問題ないと思う。
 
 一方で**相対値構文**を使用すると、起点となる色をもとにして透明度だけ変更したり、起点色の`rgb値`のうち`r`の値だけ使用して色を設定したりといったように、**起点色という一つの色をもとに柔軟な色設定が可能となる。**
+
+### 使い方
+
+相対値構文は以下のように書く。
+
+```
+rgb(from <color> R G B[ / A])
+```
