--- a/JavaScript/【実践編】画面にカラフルな色をランダム生成.md
+++ b/JavaScript/【実践編】画面にカラフルな色をランダム生成.md
@@ -2,6 +2,7 @@
 * [概要](#概要)
 * [RGBを使用してランダム生成](#RGBを使用してランダム生成)
 * [相対値構文など](#相対値構文など)
+* [使い方](#使い方)
 
 ## 概要
 
@@ -79,3 +80,32 @@ document.body.appendChild(colorBoxContainer);
 ```
 rgb(from <color> R G B[ / A])
 ```
+
+`<color>`の部分には`hsl(0 100% 50%)`などを記述する。
+
+具体的には以下のように書く。
+
+```
+rgb(from hsl(0 100% 50%) r g b)
+```
+
+上記のコードは`hsl`で指定した色(`hsl(0 100% 50%)`は赤を表す)をそのまま出力する。
+
+上記のコードでは起点色をそのまま出力するだけだったが、今度は起点色をもとにして実際に変更を加えてる。
+
+以下のように書く。
+
+```
+rgb(from hsl(0 100% 50%) r 80 80)
+```
+
+上記のコードを実行すると以下の動作が行われる。( 参照:[MDN](https://developer.mozilla.org/ja/docs/Web/CSS/color_value/rgb) )
+
+||動作|
+|-|-|
+|①|起点色（`hsl(0 100% 50%)`）を同等の `rgb()` に変換します（`rgb(255 0 0)`)。|
+|②|出力色のRチャネル値を起点色の`rgb()`相当のRチャネル値（`255`）に設定します。|
+|③|出力色の G および B チャネル値を、起点色に基づかない新しい値に設定します：それぞれ `80` および `80`。|
+
+以上の動作が行われ、この場合の最終的な出力色は`rgb(255 80 80)`となる。
+
