--- a/JavaScript/【実践編】画面にカラフルな色をランダム生成.md
+++ b/JavaScript/【実践編】画面にカラフルな色をランダム生成.md
@@ -89,7 +89,7 @@ rgb(from <color> R G B[ / A])
 rgb(from hsl(0 100% 50%) r g b)
 ```
 
-上記のコードは`from`で指定した色(`hsl(0 100% 50%)`は赤を表す)をそのまま出力する。
+上記のコードは`from`で指定した色(`hsl(0 100% 50%)`は**赤**を表す)をそのまま出力する。
 
 上記のコードでは起点色をそのまま出力するだけだったが、今度は起点色をもとにして実際に変更を加えてる。
 
