--- a/JavaScript/【実践編】画面にカラフルな色をランダム生成.md
+++ b/JavaScript/【実践編】画面にカラフルな色をランダム生成.md
@@ -111,3 +111,11 @@ rgb(from hsl(0 100% 50%) r 80 80)
 
 **便利ツール**
 
+以下のツールを使うと`hsl()関数`で指定した色をリアルタイムで確認できるので便利。
+
+[HSL/HSV カラーピッカー](https://www.oh-benri-tools.com/tools/color/hsl-hsv-color-picker)
+
+||意味|
+|-|-|
+|`HSV`|上記のツール名にも入っている`HSV`は、HとSは基本的に`hsl`と同じだが、`V`だけが違う。この`V`は`Value`の略で「明度」を意味し、**「どれだけ反射しているか」** を表している。上記のコードで指定した`hsl(0 100% 50%)`と同じ数値にして`hsv(0 100% 50%)`として先ほどのカラーピッカーで確認してみると、赤ではなく **「暗めの赤みがかった茶色」** になる。|
+
