--- a/JavaScript/【実践編】画面にカラフルな色をランダム生成.md
+++ b/JavaScript/【実践編】画面にカラフルな色をランダム生成.md
@@ -119,5 +119,5 @@ rgb(from hsl(0 100% 50%) r 80 80)
 
 ||意味|
 |-|-|
-|`HSV`|上記のツール名にも入っている`HSV`は、HとSは基本的に`hsl`と同じだが、`V`だけが違う。この`V`は`Value`の略で「明度」を意味し、**「どれだけ反射しているか」** を表している。上記のコードで指定した`hsl(0 100% 50%)`と同じ数値にして`hsv(0 100% 50%)`として先ほどのカラーピッカーで確認してみると、赤ではなく **「暗めの赤みがかった茶色」** になる。|
+|`HSV`|上記のツール名にも入っている`HSV`は、HとSは基本的に`hsl`と同じだが、`V`だけが違う。この`V`は`Value`の略で「明度」を意味し、**「どれだけ反射しているか」** を表している。( 参照:[HSL/HSV基礎知識](https://colorpalettes.jp/website-colors/hslhsv/) )上記のコードで指定した`hsl(0 100% 50%)`と同じ数値にして`hsv(0 100% 50%)`として先ほどのカラーピッカーで確認してみると、赤ではなく **「暗めの赤みがかった茶色」** になる。|
 
