--- a/JavaScript/【実践編】画面にカラフルな色をランダム生成.md
+++ b/JavaScript/【実践編】画面にカラフルな色をランダム生成.md
@@ -3,6 +3,7 @@
 * [RGBを使用してランダム生成](#RGBを使用してランダム生成)
 * [相対値構文など](#相対値構文など)
 * [使い方](#使い方)
+* [HSLやRGB間の変換は自動で行われる](#HSLやRGB間の変換は自動で行われる)
 
 ## 概要
 
@@ -120,4 +121,8 @@ rgb(from hsl(0 100% 50%) r 80 80)
 ||意味|
 |-|-|
 |`HSV`|上記のツール名にも入っている`HSV`は、HとSは基本的に`hsl`と同じだが、`V`だけが違う。この`V`は`Value`の略で「明度」を意味し、**「どれだけ反射しているか」** を表している。( 参照:[HSL/HSV基礎知識](https://colorpalettes.jp/website-colors/hslhsv/) )上記のコードで指定した`hsl(0 100% 50%)`と同じ数値にして`hsv(0 100% 50%)`として先ほどのカラーピッカーで確認してみると、赤ではなく **「暗めの赤みがかった茶色」** になる。|
+
+### HSLやRGB間の変換は自動で行われる
+
+MDNの解説ページに「現在、ウェブ開発者が作業する空間としてはRGB色空間が主流です。 HEX、RGB、HSL 色空間は異なる形で表記されますが、ブラウザーはこれらの色表記間の値を**自動的に変換します。**」とあるように、HSLやRGB間の変換はブラウザが自動で行ってくれる。( 参照:[MDN](https://developer.mozilla.org/ja/docs/Web/Accessibility/Understanding_Colors_and_Luminance) )
 
