--- a/JavaScript/【実践編】画面にカラフルな色をランダム生成.md
+++ b/JavaScript/【実践編】画面にカラフルな色をランダム生成.md
@@ -124,5 +124,5 @@ rgb(from hsl(0 100% 50%) r 80 80)
 
 ### HSLやRGB間の変換は自動で行われる
 
-MDNの解説ページに「現在、ウェブ開発者が作業する空間としてはRGB色空間が主流です。 HEX、RGB、HSL 色空間は異なる形で表記されますが、ブラウザーはこれらの色表記間の値を**自動的に変換します。**」とあるように、HSLやRGB間の変換はブラウザが自動で行ってくれる。( 参照:[MDN](https://developer.mozilla.org/ja/docs/Web/Accessibility/Understanding_Colors_and_Luminance) )
+MDNの解説ページに「現在、ウェブ開発者が作業する空間としてはRGB色空間が主流です。 HEX、RGB、HSL 色空間は異なる形で表記されますが、ブラウザーはこれらの色表記間の値を**自動的に変換します。**」とあるように、HSLやRGB間の変換は**ブラウザが自動で行ってくれる。** ( 参照:[MDN](https://developer.mozilla.org/ja/docs/Web/Accessibility/Understanding_Colors_and_Luminance) )
 
