--- a/JavaScript/【実践編】画面にカラフルな色をランダム生成.md
+++ b/JavaScript/【実践編】画面にカラフルな色をランダム生成.md
@@ -4,6 +4,7 @@
 * [相対値構文など](#相対値構文など)
 * [使い方](#使い方)
 * [HSLやRGB間の変換は自動で行われる](#HSLやRGB間の変換は自動で行われる)
+* [四捨五入はしなくても動く](#四捨五入はしなくても動く)
 
 ## 概要
 
@@ -125,4 +126,38 @@ rgb(from hsl(0 100% 50%) r 80 80)
 ### HSLやRGB間の変換は自動で行われる
 
 MDNの解説ページに「現在、ウェブ開発者が作業する空間としてはRGB色空間が主流です。 HEX、RGB、HSL 色空間は異なる形で表記されますが、ブラウザーはこれらの色表記間の値を**自動的に変換します。**」とあるように、HSLやRGB間の変換は**ブラウザが自動で行ってくれる。** ( 参照:[MDN](https://developer.mozilla.org/ja/docs/Web/Accessibility/Understanding_Colors_and_Luminance) )
+
+### 四捨五入はしなくても動く
+
+「RGBを使用してランダム生成」の節で書いたコードは以下の部分で`Math.round()関数`を使用して四捨五入を行っているが、**この`Math.round()関数`はなくても動く。**
+
+```
+const r = Math.round(Math.random() * 255);
+const g = Math.round(Math.random() * 255);
+const b = Math.round(Math.random() * 255);
+
+colorBox.style.backgroundColor = `rgb(${r},${g},${b})`;
+```
+
+なので、以下のように書いてもok。
+
+```
+const x = Math.random() * 360;
+colorBox2.textContent = x; /* ここでMath.random()で生成された数値を表示させている */
+
+colorBox2.style.backgroundColor = `rgb(${x} 255 255)`;
+```
+
+実行してみると、以下のようにXの中身が`194.54396172663968`なのに`rbg(195,255 255)`となって、自動で近似の値が適用されている。
+
+おそらく`Math.round()関数`を使用しなくともブラウザが自動で変換をしてくれるのだと考えられる。
+
+```
+/* 実行結果 */
+/* xの中身 */
+194.54396172663968
+
+/* background-colorの値に注目 */
+<div style="width: 500px; height: 50px; background-color: rgb(195, 255, 255);">194.54396172663968</div>
+```
 
