--- a/JavaScript/【実践編】画面にカラフルな色をランダム生成.md
+++ b/JavaScript/【実践編】画面にカラフルな色をランダム生成.md
@@ -142,13 +142,13 @@ colorBox.style.backgroundColor = `rgb(${r},${g},${b})`;
 なので、以下のように書いてもok。
 
 ```
-const x = Math.random() * 360;
+const x = Math.random() * 360; /* Math.round()関数を取り払った */
 colorBox2.textContent = x; /* ここでMath.random()で生成された数値を表示させている */
 
 colorBox2.style.backgroundColor = `rgb(${x} 255 255)`;
 ```
 
-実行してみると、以下のようにXの中身が`194.54396172663968`なのに`rbg(195,255 255)`となって、自動で近似の値が適用されている。
+実行してみると、以下のようにXの中身が`194.54396172663968`なのに`rbg(195,255 255)`となって、**自動で近似の値が適用されている。**
 
 おそらく`Math.round()関数`を使用しなくともブラウザが自動で変換をしてくれるのだと考えられる。
 
