--- a/JavaScript/【実践編】画面にカラフルな色をランダム生成.md
+++ b/JavaScript/【実践編】画面にカラフルな色をランダム生成.md
@@ -121,7 +121,9 @@ rgb(from hsl(0 100% 50%) r 80 80)
 
 ||意味|
 |-|-|
-|`HSV`|上記のツール名にも入っている`HSV`は、HとSは基本的に`hsl`と同じだが、`V`だけが違う。この`V`は`Value`の略で「明度」を意味し、**「どれだけ反射しているか」** を表している。( 参照:[HSL/HSV基礎知識](https://colorpalettes.jp/website-colors/hslhsv/) )上記のコードで指定した`hsl(0 100% 50%)`と同じ数値にして`hsv(0 100% 50%)`として先ほどのカラーピッカーで確認してみると、赤ではなく **「暗めの赤みがかった茶色」** になる。|
+|`HSV`|上記のツール名にも入っている`HSV`は、HとSは基本的に`hsl`と同じだが、`V`だけが違う。この`V`は`Value`の略で「明度」を意味し、`HSV`の場合`hsl`と違い **「どれだけ光を吸収しているか」** を表している。( 参照:[HSL/HSV基礎知識](https://colorpalettes.jp/website-colors/hslhsv/) )上記のコードで指定した`hsl(0 100% 50%)`と同じ数値にして`hsv(0 100% 50%)`として先ほどのカラーピッカーで確認してみると、赤ではなく **「暗めの赤みがかった茶色」** になる。一方で`hsl`の`L`は **「どれだけの明るさの光当てているか」** を表す。なので`hsl`の場合、`L`を最大にすると**真っ白**になる。一方`HSL`の`L`を最大にすると**原色**となり、最小にするとどんな光も吸収してしまうブラックホールのように**真っ黒**になる。|
+
+`H`は英語のhueの略で、「色相」を表し、`S`はSaturationの略で「彩度」を表す。
 
 ### HSLやRGB間の変換は自動で行われる
 
