--- a/JavaScript/【実践編】画面にカラフルな色をランダム生成.md
+++ b/JavaScript/【実践編】画面にカラフルな色をランダム生成.md
@@ -5,6 +5,7 @@
 * [使い方](#使い方)
 * [HSLやRGB間の変換は自動で行われる](#HSLやRGB間の変換は自動で行われる)
 * [四捨五入はしなくても動く](#四捨五入はしなくても動く)
+* [HSLを使用してランダム生成](#HSLを使用してランダム生成)
 
 ## 概要
 
@@ -164,3 +165,48 @@ colorBox2.style.backgroundColor = `rgb(${x} 255 255)`;
 <div style="width: 500px; height: 50px; background-color: rgb(195, 255, 255);">194.54396172663968</div>
 ```
 
+### HSLを使用してランダム生成
+
+次は`hsl()関数`を使用して色をランダム生成してみる。
+
+以下のコードを書く。
+
+```
+// 四角形を入れるコンテナ。
+// flexboxで横並びにして、横方向にはみ出したら折り返すようにする。
+const colorBoxContainer = document.createElement('div');
+colorBoxContainer.style.display = 'flex';
+colorBoxContainer.style.flexWrap = 'wrap';
+
+// 色のついた四角形を100個作って先ほどのコンテナの中に入れる。
+for(let i=0; i<100; i++) {
+  // サイズは100px x 100px。
+  const colorBox = document.createElement('div');
+  colorBox.style.width = '100px';
+  colorBox.style.height = '100px';
+
+  // 色はHue（色相）を変化させる。
+  // Saturation（彩度）とLightness（輝度）は固定。
+  const h = Math.random() * 360;
+  colorBox.style.backgroundColor = `hsl(${h}, 80%, 60%)`;
+  colorBoxContainer.appendChild(colorBox);
+}
+
+// コンテナをbodyに追加する。
+document.body.appendChild(colorBoxContainer);
+```
+
+実行すると、今度は`hsl`を使用しているため、最初の`rgb`を使用した時より色が綺麗になる。
+
+**グラデーション**にしたい場合は`hsl()関数`のコードの箇所を以下のように変更する。
+
+```
+// 色はHue（色相）を変化させる。
+// Saturation（彩度）とLightness（輝度）は固定。
+
+const h = i * (360 / 100); /* 変更箇所 */
+colorBox.style.backgroundColor = `hsl(${h}, 80%, 60%)`;
+colorBoxContainer.appendChild(colorBox);
+```
+
+`(360 / 100)`としているのは、このコードでは`for文`を使って100回ループしているので`3.6 x 100 = 360`となって**ちょうど角度が一周するため。**
