--- a/JavaScript/【実践編】画面にカラフルな色をランダム生成.md
+++ b/JavaScript/【実践編】画面にカラフルな色をランダム生成.md
@@ -210,3 +210,12 @@ colorBoxContainer.appendChild(colorBox);
 ```
 
 `(360 / 100)`としているのは、このコードでは`for文`を使って100回ループしているので`3.6 x 100 = 360`となって**ちょうど角度が一周するため。**
+
+計算の優先順位は数学と同じで、`()`の中から先に計算される。( 参照:[現代のJavaScript](https://ja.javascript.info/operators#ref-368) )
+
+**関連用語**
+
+||意味|
+|-|-|
+|単項演算子|**被演算子(演算の対象)が文字通り一つ**の演算子。例えは単項演算子のうち`+`は **「非数値を数値に変換する」**。`alert( +true );`と書くと実行結果は`1`のアラートが表示される。もしくは`alert( +"" )`と書くと今度は`0`のアラートが表示される。|
+|||
