--- a/JavaScript/【実践編】画面にカラフルな色をランダム生成.md
+++ b/JavaScript/【実践編】画面にカラフルな色をランダム生成.md
@@ -217,5 +217,6 @@ colorBoxContainer.appendChild(colorBox);
 
 ||意味|
 |-|-|
-|単項演算子|**被演算子(演算の対象)が文字通り一つ**の演算子。例えは単項演算子のうち`+`は **「非数値を数値に変換する」**。具体的には`alert( +true );`と書くと実行結果は`1`のアラートが表示される。もしくは`alert( +"" )`と書くと今度は`0`のアラートが表示される。|
+|単項演算子|**オペランド(演算の対象)が文字通り一つ**の演算子。例えは単項演算子のうち`+`は **「非数値を数値に変換する」**。具体的には`alert( +true );`と書くと実行結果は`1`のアラートが表示される。もしくは`alert( +"" )`と書くと今度は`0`のアラートが表示される。|
 |オペランド|オペランドは**演算子が適用される対象のこと**を指す。例えば乗算`5 * 2`では、2つのオペランドがある。左のオペランドは`5`, 右のオペランドは`2`となる。また、オペランドは**引数**と呼ばれることもある。|
+|二項演算子|オペランドが**2つ**登場する演算子のこと。例えば式`1 + 2`では`+`が二項演算子で、`1`と`2`がオペランドとなる。|
