--- a/JavaScript/【実践編】画面にカラフルな色をランダム生成.md
+++ b/JavaScript/【実践編】画面にカラフルな色をランダム生成.md
@@ -223,4 +223,4 @@ colorBoxContainer.appendChild(colorBox);
 
 **※補足**
 
-オペランドは、心理学で出てくる「オペラント条件づけ」とは別ものなので注意。こちらはオペラン **「ト」** と濁点が無い。
+オペランドは、心理学で出てくる「オペラント条件づけ」と**別もの**なので注意。こちらはオペラン **「ト」** と濁点が無い。
