--- a/JavaScript/【実践編】画面にカラフルな色をランダム生成.md
+++ b/JavaScript/【実践編】画面にカラフルな色をランダム生成.md
@@ -209,7 +209,7 @@ colorBox.style.backgroundColor = `hsl(${h}, 80%, 60%)`;
 colorBoxContainer.appendChild(colorBox);
 ```
 
-`(360 / 100)`としているのは、このコードでは`for文`を使って100回ループしているので`3.6 x 100 = 360`となって**ちょうど角度が一周するため。**
+`(360 / 100)`としているのは、このコードでは`for文`を使って100回ループしているので`3.6 x 100 = 360`度となって**ちょうど角度が一周するため。**
 
 計算の優先順位は数学と同じで、`()`の中から先に計算される。( 参照:[現代のJavaScript](https://ja.javascript.info/operators#ref-368) )
 
