--- a/JavaScript/ブロック崩しゲームを作る.md
+++ b/JavaScript/ブロック崩しゲームを作る.md
@@ -15,7 +15,26 @@ https://developer.mozilla.org/ja/docs/Games/Tutorials/2D_Breakout_game_pure_Java
 
 ### canvas要素
 
-`canvas要素`は画面上に**グラフィックやアニメーションを描画**する時に使用する。
+`canvas要素`は画面上に**グラフィックやアニメーションを描画**する時に使われる。
+
+**使い方**
+
+基本的に`document.querySelector()メソッド`と`getContext()メソッド`と一緒に使用される。
+
+具体的には以下のように書く。　
+
+```
+const canvas = document.querySelector("canvas");
+const ctx = canvas.getContext("2d");
+```
+
+**・解説**
+
+まず、`document.querySelector()メソッド`で`canvas要素`を取得。
+
+その後`getContext()メソッド`の引数を`"2d"`と設定することで、`CanvasRenderingContext2Dオブジェクト`が作成される。
+
+この`CanvasRenderingContext2Dオブジェクト`の持つ色々なメソッドを組み合わせることで、画面にドットを描いたり、その他にも図形、文字、画像を描画したりすることができるようになる。
 
 
 
