--- a/JavaScript/ブロック崩しゲームを作る.md
+++ b/JavaScript/ブロック崩しゲームを作る.md
@@ -2,6 +2,7 @@
 * [概要](#概要)
 * [参考記事](#参考記事)
 * [canvas要素](#canvas要素)
+* [図形を描画](#図形を描画)
 
 ### 概要
 
@@ -36,7 +37,24 @@ const ctx = canvas.getContext("2d");
 
 この`CanvasRenderingContext2Dオブジェクト`の持つ色々なメソッドを組み合わせることで、画面にドットを描いたり、その他にも図形、文字、画像を描画したりすることができるようになる。
 
+### 図形を描画
 
+実際に図形を描画するには、上記のコードにたいして以下のように追記する。
+
+```
+const canvas = document.querySelector("canvas");
+const ctx = canvas.getContext("2d");
+
+// 図形を描画
+ctx.fillStyle = "green";
+ctx.fillRect(10, 10, 100, 100);
+```
+
+**解説**
+||意味|
+|-|-|
+|`fillStyle`|図形の色を指定するプロパティ。|
+|`fillRect`|` fillStyle`で塗りつぶした色をもとに長方形を作成するプロパティ。書き方は`fillRect(x, y, width, height)`のように書き、(x, y)`を始点とし、`width`と`height`でサイズを指定しで描画する。始点は左上から始まる|
 
 
 
