--- a/JavaScript/ブロック崩しゲームを作る.md
+++ b/JavaScript/ブロック崩しゲームを作る.md
@@ -56,5 +56,9 @@ ctx.fillRect(10, 10, 100, 100);
 |`fillStyle`|図形の色を指定するプロパティ。|
 |`fillRect`|` fillStyle`で塗りつぶした色をもとに長方形を作成するプロパティ。書き方は`fillRect(x, y, width, height)`のように書き、(x, y)`を始点とし、`width`と`height`でサイズを指定しで描画する。始点は左上から始まる|
 
+`fill`は英語で **「塗りつぶす」** といった意味がある。
+
+また、`Rect`は英語で**長方形**を意味するrectangleの略。
+
 
 
