--- a/JavaScript/ブロック崩しゲームを作る.md
+++ b/JavaScript/ブロック崩しゲームを作る.md
@@ -54,7 +54,7 @@ ctx.fillRect(10, 10, 100, 100);
 ||意味|
 |-|-|
 |`fillStyle`|図形の色を指定するプロパティ。|
-|`fillRect`|` fillStyle`で塗りつぶした色をもとに長方形を作成するプロパティ。書き方は`fillRect(x, y, width, height)`のように書き、`(x, y)`を始点とし、`width`と`height`でサイズを指定しで描画する。始点は左上から始まる|
+|`fillRect`|` fillStyle`で塗りつぶした色をもとに長方形を作成するプロパティ。書き方は`fillRect(x, y, width, height)`のように書き、`(x, y)`を始点とし、`width`と`height`でサイズを指定しで描画する。始点は左上から始まる。具体的には`(x,y)`を`(20, 40)`とした場合、画面の左端から`20px`、上端から`30px`の位置に長方形を作成する。|
 
 `fill`は英語で **「塗りつぶす」** といった意味がある。
 
