--- a/JavaScript/ブロック崩しゲームを作る.md
+++ b/JavaScript/ブロック崩しゲームを作る.md
@@ -3,7 +3,7 @@
 * [参考記事](#参考記事)
 * [canvas要素](#canvas要素)
 * [図形を描画](#図形を描画)
-* [独立した長方形](#独立した四角形)
+* [独立した四角形](#独立した四角形)
 
 ### 概要
 
@@ -55,18 +55,18 @@ ctx.fillRect(10, 10, 100, 100);
 ||意味|
 |-|-|
 |`fillStyle`|図形の色を指定するプロパティ。|
-|`fillRect`|` fillStyle`で塗りつぶした色をもとに長方形を作成するメソッド。書き方は`fillRect(x, y, width, height)`のように書き、`(x, y)`を始点とし、`width`と`height`でサイズを指定しで描画する。始点は左上から始まる。具体的には`(x,y)`を`(20, 40)`とした場合、`canvas要素内`の左端から`20px`、上端から`40px`の位置に長方形を作成する。|
+|`fillRect`|` fillStyle`で塗りつぶした色をもとに四角形を作成するメソッド。書き方は`fillRect(x, y, width, height)`のように書き、`(x, y)`を始点とし、`width`と`height`でサイズを指定しで描画する。始点は左上から始まる。具体的には`(x,y)`を`(20, 40)`とした場合、`canvas要素内`の左端から`20px`、上端から`40px`の位置に長方形を作成する。|
 
 `fill`は英語で **「塗りつぶす」** といった意味がある。
 
-また、`Rect`は英語で**長方形**を意味するrectangleの略。
+また、`Rect`は英語で**長方形**を意味するrectangleの略。(普通に正方形も作成できることから、**四角形**と捉えておいたほうが良い)
 
-### 独立した長方形
+### 独立した四角形
 
 上記のコードの`// 図形を描画`の箇所を以下のコードに変更する。
 
 ```
-// 独立した長方形を描画
+// 独立した赤い四角形を描画
 ctx.beginPath();
 ctx.rect(20, 40, 50, 50);
 ctx.fillStyle = "#FF0000";
@@ -80,7 +80,7 @@ ctx.closePath();
 |-|-|
 |`beginPath()`|独立したパスの作成するメソッド。例えば`beginPath()`を、線を引く毎に最初に記述すると色違いの線を引くことができる。|
 |`closePath()`|図形の最初と最後の点を自動的に接続するメソッド。孤や三角形などの底辺を作成する時に使う。なお図形がすでに閉じていたり、1つしか点がなかったりした場合は、このメソッドは何もしない。|
-|`rect()`|**ただ長方形の作成のみを行う**メソッド。そのため長方形の作成と`canvas`への描画を同時に行いたい場合は`fillRect()`を使用する。|
+|`rect()`|**ただ四角形の作成のみを行う**メソッド。そのため長方形の作成と`canvas`への描画を同時に行いたい場合は`fillRect()`を使用する。|
 |`fill()`|`rect()`で作成した長方形を`canvas`に描画する時に使用する。|
 
 
