--- a/JavaScript/らんだむゴールくん作成時の疑問点.md
+++ b/JavaScript/らんだむゴールくん作成時の疑問点.md
@@ -1,5 +1,5 @@
 *目次*
-* [](#)
+* [なぜ親要素をrelativeにして子要素をabsoluteにするとレイヤーができるのか](#なぜ親要素をrelativeにして子要素をabsoluteにするとレイヤーができるのか)
 * [](#)
 
 ### なぜ親要素をrelativeにして子要素をabsoluteにするとレイヤーができるのか
