--- a/マークアップ言語/CSS/ボックス内の一番下にテキストを移動させる.md
+++ b/マークアップ言語/CSS/ボックス内の一番下にテキストを移動させる.md
@@ -65,7 +65,7 @@ bottomは下からの高さをpxで指定できる。
 
 このことを理解するには、`absolute`の仕様をしっかりと把握することが大切になる。
 
-以下はMDNのabosoluteについて書かれた説明を意訳したもの。
+以下はMDNの`abosolute`について書かれた説明を意訳したもの。
 
 >要素のためのスペースが確保されません。代わりに、その要素の位置を、位置指定された祖先要素のうちもっとも近いもの、もしくは、その要素の包含ブロックを基準にして決めます。
 >絶対位置指定されたボックスのマージンは、他の要素のマージンと相殺されません。
@@ -89,7 +89,7 @@ bottomは下からの高さをpxで指定できる。
 
 まとめると、`absolute`は以下の挙動をすることになる。
 
-**・直近の親要素に`relative`, `absolute`, `fixed`, `sticky`のどれかのpositionプロパティの値が指定されていれば、その親要素を基準にする。一方、何も指定されていなければ、包含ブロックを基準にする。**
+**・直近の親要素に`relative`, `absolute`, `fixed`, `sticky`のどれかのpositionプロパティの値が指定されていれば、その親要素を基準に要素の位置を決定する。一方、何も指定されていなければ、包含ブロックを基準にする。**
 
 ### つまり親要素はrelativeじゃなくてもok
 
