--- a/マークアップ言語/CSS/ボックス内の一番下にテキストを移動させる.md
+++ b/マークアップ言語/CSS/ボックス内の一番下にテキストを移動させる.md
@@ -89,7 +89,7 @@ bottomは下からの高さをpxで指定できる。
 
 まとめると、`absolute`は以下の挙動をすることになる。
 
-**・直近の親要素に`relative`, `absolute`, `fixed`, `sticky`のどれかのpositionプロパティの値が指定されていれば、その親要素を基準に要素の位置を決定する。一方、何も指定されていなければ、包含ブロックを基準にする。**
+**・直近の親要素に`relative`, `absolute`, `fixed`, `sticky`のどれかのpositionプロパティが指定されていれば、その親要素を基準に要素の位置を決定する。一方、何も指定されていなければ、包含ブロックを基準にする。**
 
 ### つまり親要素はrelativeじゃなくてもok
 
