--- a/マークアップ言語/CSS/ボックス内の一番下にテキストを移動させる.md
+++ b/マークアップ言語/CSS/ボックス内の一番下にテキストを移動させる.md
@@ -59,7 +59,7 @@ bottomは下からの高さをpxで指定できる。
 >
 >引用:https://developer.mozilla.org/en-US/docs/Web/CSS/bottom
 
-つまり、厳密には要素の「margin-bottom」の外側の端と、包含ブロックの「padding-bottom」の外側の端との間の距離を指定するとなる。
+つまり、厳密いえば`position`の値が`absolute`または`fixed`に設定されている場合、要素の「margin-bottom」の外側の端と、包含ブロックの「padding-bottom」の外側の端との間の距離を指定するとなる。
 
 ### なぜ親要素をrelativeに子要素をabsoluteにすると良いのか
 
