--- a/JavaScript/らんだむゴールくん作成時の疑問点.md
+++ b/JavaScript/らんだむゴールくん作成時の疑問点.md
@@ -37,5 +37,7 @@
 ```
 重なり方は、一番上の`canvas要素`が一番後ろになって、そこから手前に重なっていく。
 
+では、なぜこのような動作をするのかについて見ていく。
 
+まず、要素の`position`の値が`absolute`の時、直近の親要素の`position`が`relative`, `absolute`, `fixed`, `sticky`であれば、
 
