--- a/JavaScript/らんだむゴールくん作成時の疑問点.md
+++ b/JavaScript/らんだむゴールくん作成時の疑問点.md
@@ -39,5 +39,19 @@
 
 では、なぜこのような動作をするのかについて見ていく。
 
-まず、要素の`position`の値が`absolute`の時、直近の親要素の`position`が`relative`, `absolute`, `fixed`, `sticky`であれば、
+まず、要素の`position`の値が`absolute`の時、直近の親要素の`position`が`relative`, `absolute`, `fixed`, `sticky`であれば、**その直近の親要素の位置を基準に位置を決定する。**
+
+そして`position`の値が`absolute`の時、以下の性質がある。
+
+それは、**「自分自身の元々の表示領域を確保しない」** というもの。
+
+まとめると、親要素を`relative`にするのは**位置の基準を設定するため**で、子要素を`absolute`にすると **「自分自身の元々の表示領域が確保されない」ため要素がレイヤー状に重なっていく**ということになる。
+
+一方、子要素を`relative`にすると **「元々の表示領域が確保される」** ため、レイヤー状に重ならなくなる。
+
+
+
+
+
+
 
