--- a/JavaScript/らんだむゴールくん作成時の疑問点.md
+++ b/JavaScript/らんだむゴールくん作成時の疑問点.md
@@ -49,6 +49,40 @@
 
 一方、子要素を`relative`にすると **「元々の表示領域が確保される」** ため、レイヤー状に重ならなくなる。
 
+本当に重ならないかどうかを確かめるには以下のコードを書く。
+
+CSS
+```
+div.parent{
+ height:300px;
+ width:500px;
+ background-color:#B0A695;
+ position:relative;　/* ここで親要素にralativeを指定している*/
+}
+
+div.parent > div{
+ background-color:#EBE3D5;
+ position:relative; /* 子要素をabsoluteからrelativeに */
+}
+```
+
+HTML
+```
+
+<body>
+
+
+<div class="parent">
+ <div class="child">こんにちわ</div>
+ <div class="child2">hello!</div>
+ <div class="child3">え!?</div>
+</div>
+
+</body>
+```
+
+
+
 
 
 
