--- a/JavaScript/らんだむゴールくん作成時の疑問点.md
+++ b/JavaScript/らんだむゴールくん作成時の疑問点.md
@@ -1,6 +1,6 @@
 *目次*
 * [なぜ親要素をrelativeにして子要素をabsoluteにするとレイヤーができるのか](#なぜ親要素をrelativeにして子要素をabsoluteにするとレイヤーができるのか)
-* [](#)
+* [本当に重ならないかを確かめる](#本当に重ならないかを確かめる)
 
 ### なぜ親要素をrelativeにして子要素をabsoluteにするとレイヤーができるのか
 
@@ -48,6 +48,8 @@
 まとめると、親要素を`relative`にするのは**位置の基準を設定するため**で、子要素を`absolute`にすると **「自分自身の元々の表示領域が確保されない」ため要素がレイヤー状に重なっていく**ということになる。
 
 一方、子要素を`relative`にすると **「元々の表示領域が確保される」** ため、レイヤー状に重ならなくなる。
+
+### 本当に重ならないかを確かめる
 
 本当に重ならないかどうかを確かめるには以下のコードを書く。
 
