--- a/JavaScript/らんだむゴールくん作成時の疑問点.md
+++ b/JavaScript/らんだむゴールくん作成時の疑問点.md
@@ -1,6 +1,7 @@
 *目次*
 * [なぜ親要素をrelativeにして子要素をabsoluteにするとレイヤーができるのか](#なぜ親要素をrelativeにして子要素をabsoluteにするとレイヤーができるのか)
 * [本当に重ならないかを確かめる](#本当に重ならないかを確かめる)
+* [フレックスボックスの中央配置](#フレックスボックスの中央配置)
 
 ### なぜ親要素をrelativeにして子要素をabsoluteにするとレイヤーができるのか
 
@@ -82,6 +83,28 @@ HTML
 
 </body>
 ```
+
+### フレックスボックスの中央配置
+
+要素を画面の中央に配置したい時はCSSを以下のように書く。
+
+```
+#container {
+ width:100%;
+ height:100px;　/*  高さは任意で変更する  */
+ background:#ffffff;
+ display: flex;
+ align-items: center;
+ justify-content: center;
+}
+```
+
+**解説**
+
+||意味|
+|-|-|
+|`align-items`|フレックスボックスでは交差軸方向のアイテムの配置を設定する。交差軸とはフレックスボックスの主軸に垂直に交わる軸のことを指す。主軸は`flex-direction`によって定義され、デフォルトの値は`row`であることから、デフォルトの主軸は横向きとなる。その横向きの主軸に垂直に交わる交差軸は「縦軸」となる。なので、**`align-items: center`とするとデフォルトでは縦軸方向の真ん中の位置に要素を指定できる。** |
+|||
 
 
 
