--- a/JavaScript/らんだむゴールくん作成時の疑問点.md
+++ b/JavaScript/らんだむゴールくん作成時の疑問点.md
@@ -103,8 +103,8 @@ HTML
 
 ||意味|
 |-|-|
-|`align-items`|フレックスボックスでは交差軸方向のアイテムの配置を設定する。交差軸とはフレックスボックスの主軸に垂直に交わる軸のことを指す。主軸は`flex-direction`によって定義され、デフォルトの値は`row`であることから、デフォルトの主軸は横向きとなる。その横向きの主軸に垂直に交わる交差軸は「縦軸」となる。なので、**`align-items: center`とするとデフォルトでは縦軸方向の真ん中の位置に要素を指定できる。** |
-|||
+|`align-items`|フレックスボックスでは**交差軸**方向のアイテムの配置を設定する。交差軸とはフレックスボックスの主軸に垂直に交わる軸のことを指す。主軸は`flex-direction`によって定義され、デフォルトの値は`row`であることから、デフォルトの主軸は横向きとなる。その横向きの主軸に垂直に交わる交差軸は「縦軸」となる。なので、**`align-items: center`とするとデフォルトでは縦軸方向の真ん中の位置に要素を指定できる。** |
+|`justify-content`|フレックスボックスでは**主軸**に沿ったアイテムの配置を設定する。`justify-content: center`|
 
 
 
