--- a/JavaScript/らんだむゴールくん作成時の疑問点.md
+++ b/JavaScript/らんだむゴールくん作成時の疑問点.md
@@ -1,7 +1,7 @@
 *目次*
 * [なぜ親要素をrelativeにして子要素をabsoluteにするとレイヤーができるのか](#なぜ親要素をrelativeにして子要素をabsoluteにするとレイヤーができるのか)
 * [本当に重ならないかを確かめる](#本当に重ならないかを確かめる)
-* [フレックスボックスの中央配置](#フレックスボックスの中央配置)
+* [要素をフレックスボックスの中央に配置する](#要素ょフレックスボックスの中央に配置する)
 
 ### なぜ親要素をrelativeにして子要素をabsoluteにするとレイヤーができるのか
 
@@ -84,7 +84,7 @@ HTML
 </body>
 ```
 
-### フレックスボックスの中央配置
+### 要素をフレックスボックスの中央に配置する
 
 要素を画面の中央に配置したい時はCSSを以下のように書く。
 
@@ -104,7 +104,7 @@ HTML
 ||意味|
 |-|-|
 |`align-items`|フレックスボックスでは**交差軸**方向のアイテムの配置を設定する。交差軸とはフレックスボックスの主軸に垂直に交わる軸のことを指す。主軸は`flex-direction`によって定義され、デフォルトの値は`row`であることから、デフォルトの主軸は横向きとなる。その横向きの主軸に垂直に交わる交差軸は「縦軸」となる。なので、**`align-items: center`とするとデフォルトでは縦軸方向の真ん中の位置に要素を指定できる。** |
-|`justify-content`|フレックスボックスでは**主軸**に沿ったアイテムの配置を設定する。`justify-content: center`|
+|`justify-content`|フレックスボックスでは**主軸**に沿ったアイテムの配置を設定する。`justify-content: center`とすると、要素は主軸方向の中央に互いに寄せては位置される。|
 
 
 
