--- a/PHP/掲示板を作る.md
+++ b/PHP/掲示板を作る.md
@@ -7,3 +7,33 @@
 
 https://web.archive.org/web/20240123041312/https://skill-up-engineering.com/gachinko/?p=650
 
+### 三項演算子
+
+if文の代わりとして使用され、以下のように書く。
+
+```
+条件文 ? 真の時に実行される式 : 偽の時に実行される式 ;
+```
+
+**具体例**
+
+この三項演算子はJavaScriptにもあるので以下の例はJavaScriptの例をのせている。( 参照:[MDN](https://developer.mozilla.org/ja/docs/Web/JavaScript/Reference/Operators/Conditional_operator) )
+
+```
+const age = 26;
+const beverage = age >= 21 ? "ビール" : "ジュース";
+console.log(beverage); // "ビール"
+```
+
+**解説**
+
+条件文`age >= 21`が`true`であることから、変数`beverage`に`ビール`が格納されて`console.log();`で表示されている。
+
+変数名の`beverage`は英語で「飲み物」という意味。
+
+
+
+
+
+
+
