--- a/PHP/掲示板を作る.md
+++ b/PHP/掲示板を作る.md
@@ -1,5 +1,6 @@
 *目次*
 * [概要](#概要)
+* [三項演算子](#三項演算子)
 
 ## 概要
 
@@ -31,6 +32,7 @@ console.log(beverage); // "ビール"
 
 変数名の`beverage`は英語で「飲み物」という意味。
 
+### isset
 
 
 
