--- a/PHP/掲示板を作る.md
+++ b/PHP/掲示板を作る.md
@@ -36,6 +36,21 @@ console.log(beverage); // "ビール"
 
 `isset`の戻り値は「変数が存在して`null`以外の値をとれば`true`、 そうでなければ`false`を返す」。
 
+**具体例**
+
+例えば以下のコードを書くと、`isset`は戻り値として`true`を返す。
+
+```
+<?php
+
+$var = '';
+
+// これは TRUE と評価されるので、テキストが出力される
+if (isset($var)) {
+    echo "This var is set so I will print.";
+}
+```
+
 
 
 
