--- a/PHP/掲示板を作る.md
+++ b/PHP/掲示板を作る.md
@@ -2,6 +2,7 @@
 * [概要](#概要)
 * [三項演算子](#三項演算子)
 * [isset](#isset)
+* [fopen](#fopen)
 
 ## 概要
 
@@ -51,6 +52,19 @@ if (isset($var)) {
     echo "This var is set so I will print.";
 }
 ```
+
+### fopen
+
+`fopen`は「ファイルまたはURLをオープンする」する。
+
+使う時は以下のように書く。
+
+```
+fopen( “ファイル名” ,”パラメータ” );
+```
+パラメータの部分では、ファイルに対するアクセス形式を指定する。
+
+例えば`fopen( “data.txt” ,”a” );`のように書くと、`a`は「追加の書き込み」を表すのでファイルに対して「追加の書き込み」ができるようになる。
 
 
 
