--- a/PHP/掲示板を作る.md
+++ b/PHP/掲示板を作る.md
@@ -3,6 +3,7 @@
 * [三項演算子](#三項演算子)
 * [isset](#isset)
 * [fopen](#fopen)
+* [fwrite](#fwrite)
 
 ## 概要
 
@@ -65,6 +66,39 @@ fopen( “ファイル名” ,”パラメータ” );
 パラメータの部分では、ファイルに対するアクセス形式を指定する。
 
 例えば`fopen( “data.txt” ,”a” );`のように書くと、`a`は「追加の書き込み」を表すのでファイルに対して「追加の書き込み」ができるようになる。
+
+### fwrite
+
+`fwrite`は取得したファイルポインタに対する書き込み処理を行う。
+
+書き方は以下のように書く。
+
+```
+fwrite(ファイルポインタ、書き込み内容);
+```
+
+ファイルポインタは以下のように書くことで取得できる。
+
+```
+$fp = fopen( “data.txt” ,”a” );
+```
+
+変数`fp`にファイルポインタが格納される。
+
+**具体例**
+
+```
+fwrite( $fp ,  $name.”\t”.$comment.”\n”);
+```
+
+**解説**
+
+「`.`」は連結演算子といい、変数と文字列を結合させることができる。
+
+`\t`はタブのことで、タブキーを押した時にできる空白を表す。
+
+`\n`は改行を表す。
+
 
 
 
