--- a/PHP/掲示板を作る.md
+++ b/PHP/掲示板を作る.md
@@ -4,6 +4,7 @@
 * [isset](#isset)
 * [fopen](#fopen)
 * [fwrite](#fwrite)
+* [fgets](#fgets)
 
 ## 概要
 
@@ -102,6 +103,18 @@ fwrite( $fp ,  $name.”\t”.$comment.”\n”);
 `\t`はタブのことで、タブキーを押した時にできる空白を表す。
 
 `\n`は改行を表す。
+
+### fgets
+
+`fgets`は「ファイルポインタから1行取得する」。
+
+書き方は以下のように書く。
+
+```
+fgets(ファイルポインタ)
+```
+
+このファイルポインタは、公式マニュアルによると「有効なファイルポインタである必要があり、`fopen()`または`fsockopen()`で正常にオープンされた（そしてまだ`fclose()`でクローズされていない)ファイルを指している必要があります」とのこと。
 
 
 
