--- a/PHP/掲示板を作る.md
+++ b/PHP/掲示板を作る.md
@@ -106,7 +106,9 @@ fwrite( $fp ,  $name.”\t”.$comment.”\n”);
 
 ### fgets
 
-`fgets`は「ファイルポインタから1行取得する」。
+`fgets`は「ファイルポインタから1行取得して戻り値として返す」。そして、ファイルポインタから読み込むデータがもうない場合は`false`を返す。
+
+`false`を返すということは、`while()`などの条件文として使用できる。
 
 書き方は以下のように書く。
 
@@ -115,6 +117,18 @@ fgets(ファイルポインタ)
 ```
 
 このファイルポインタは、公式マニュアルによると「有効なファイルポインタである必要があり、`fopen()`または`fsockopen()`で正常にオープンされた（そしてまだ`fclose()`でクローズされていない)ファイルを指している必要があります」とのこと。
+
+**具体例**
+
+```
+ $res = fgets($fp)
+```
+
+**解説**
+
+変数`$fp`に格納されたファイルポインタを1行ずつ読み込み、その結果を変数`$res`に格納している。
+
+
 
 
 
