--- a/PHP/掲示板を作る.md
+++ b/PHP/掲示板を作る.md
@@ -5,6 +5,7 @@
 * [fopen](#fopen)
 * [fwrite](#fwrite)
 * [fgets](#fgets)
+* [explode](#explode)
 
 ## 概要
 
@@ -127,6 +128,25 @@ fgets(ファイルポインタ)
 **解説**
 
 変数`$fp`に格納されたファイルポインタを1行ずつ読み込み、その結果を変数`$res`に格納している。
+
+### explode
+
+`explode`は、指定した文字列をこれまた指定した分割記号によって分割した配列を返す。
+
+書き方は以下のように書く。
+
+```
+explode(分割記号, 文字列)
+```
+
+**具体例**
+
+```
+$pizza  = "piece1 piece2 piece3 piece4 piece5 piece6";
+$pieces = explode(" ", $pizza);
+echo $pieces[0]; // piece1
+echo $pieces[1]; // piece2
+```
 
 
 
