--- a/PHP/掲示板を作る.md
+++ b/PHP/掲示板を作る.md
@@ -6,6 +6,7 @@
 * [fwrite](#fwrite)
 * [fgets](#fgets)
 * [explode](#explode)
+* [ダブルアロー演算子](#ダブルアロー演算子)
 
 ## 概要
 
@@ -146,6 +147,29 @@ $pizza  = "piece1 piece2 piece3 piece4 piece5 piece6";
 $pieces = explode(" ", $pizza);
 echo $pieces[0]; // piece1
 echo $pieces[1]; // piece2
+```
+
+### ダブルアロー演算子
+
+配列で出てくる`=>`はダブルアロー演算子と呼ばれ、意味は「連想配列のこのキーにこの値を入れる」ということを表している。
+
+**具体例**
+
+具体的には以下のように書く。
+
+```
+<?php
+$array = array(
+    "foo" => "bar",
+    "bar" => "foo",
+);
+
+// 配列の短縮構文
+$array = [
+    "foo" => "bar",
+    "bar" => "foo",
+];
+?>
 ```
 
 
