--- a/PHP/掲示板を作る.md
+++ b/PHP/掲示板を作る.md
@@ -172,6 +172,15 @@ $array = [
 ?>
 ```
 
+例えば以下のコードだったら、「`name`をキーに持つ連想配列に`$tmp[0]`の値を入れますよ」という意味。
+
+```
+ $arr = array(
+        "name"=>$tmp[0],
+        "comment"=>$tmp[1]
+    );
+```
+
 
 
 
