--- a/PHP/掲示板を作る.md
+++ b/PHP/掲示板を作る.md
@@ -7,6 +7,7 @@
 * [fgets](#fgets)
 * [explode](#explode)
 * [ダブルアロー演算子](#ダブルアロー演算子)
+* [多次元配列](#多次元配列)
 
 ## 概要
 
@@ -179,6 +180,21 @@ $array = [
         "name"=>$tmp[0],
         "comment"=>$tmp[1]
     );
+```
+
+### 多次元配列
+
+多次元配列は、「配列の中に配列が入っているもののこと」を指す。
+
+**具体例**
+```
+$maker = array('富士通', 'NEC', 'Sony', 'Sharp');
+$type = array('Note', 'Desktop');
+
+$pc = array($maker, $type);
+
+print $pc[0][1];    // NEC と出力
+print $pc[1][0];  　// Note と出力
 ```
 
 
