--- a/PHP/掲示板を作る.md
+++ b/PHP/掲示板を作る.md
@@ -83,7 +83,7 @@ fwrite(ファイルポインタ、書き込み内容);
 
 ファイルポインタとは、ファイルの入力、出力をする際に必要となる本のしおりのようなもので、
 
-このしおりに入力、書き込みをすることで実際のファイルへの入力、出力ができるようになる。
+このしおりに入力、書き込みをすることで実際のファイルへの入力、出力ができるようになる。(つまり仲介するってことか)
 
 ファイルポインタは以下のように書くことで取得できる。
 
