--- a/PHP/掲示板を作る.md
+++ b/PHP/掲示板を作る.md
@@ -184,7 +184,7 @@ $array = [
 
 ### 多次元配列
 
-多次元配列は、「配列の中に配列が入っているもののこと」を指す。
+多次元配列は、「配列の中に配列が入っているもののこと」を指す。( 参照:[javadrive](https://www.javadrive.jp/php/array/index6.html) )
 
 **具体例**
 ```
